--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.work-sans {
+/* .work-sans {
   font-family: "Work Sans", sans-serif;
-}
+} */
 body {
-  font-family: "Playfair Display", serif;
+  font-family: "Work Sans", sans-serif;
 }
